# mkdocs-material-extended-social-plugin

./: LICENSE  README.md  pyproject.toml
mkdocs_material_extended_social_plugin/: __init__.py
